[gd_scene load_steps=7 format=2]

[ext_resource path="res://my_theme.theme" type="Theme" id=1]
[ext_resource path="res://src/game/blacksmith/blacksmith.gd" type="Script" id=2]
[ext_resource path="res://src/game/blacksmith/subprocesses/casting.tscn" type="PackedScene" id=3]
[ext_resource path="res://tres/item_pool_0.tres" type="Resource" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.176471, 0.176471, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.188235, 0.176471, 0.176471, 0.490196 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=1]

[node name="Blacksmith" type="Control"]
margin_right = 504.0
margin_bottom = 632.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
item_pool = ExtResource( 4 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
tabs_visible = false
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSelectionTab" type="PanelContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ItemSelectionTab"]
margin_left = 7.0
margin_top = 7.0
margin_right = 489.0
margin_bottom = 617.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ItemSelectionTab/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 462.0
margin_bottom = 590.0
size_flags_vertical = 3
custom_constants/separation = 40

[node name="ItemList" type="VBoxContainer" parent="TabContainer/ItemSelectionTab/MarginContainer/HBoxContainer"]
margin_right = 287.0
margin_bottom = 570.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/ItemSelectionTab/MarginContainer/HBoxContainer"]
margin_left = 327.0
margin_right = 442.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
alignment = 1

[node name="SelectButton" type="Button" parent="TabContainer/ItemSelectionTab/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 272.0
margin_right = 115.0
margin_bottom = 297.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Forge" parent="TabContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -8.0

[connection signal="pressed" from="TabContainer/ItemSelectionTab/MarginContainer/HBoxContainer/VBoxContainer2/SelectButton" to="." method="_on_SelectButton_pressed"]
